# image-processing

TP1/: CMakeLists.txt  check.cpp  reconstruction.cpp
TP1/rapport/: compte_rendu.md
TP1/report/: report.md
TP1/test/: solution_and_bad_fragment  solution_plus_three
TP2/: CMakeLists.txt  circle-detector.cpp
TP2/report/: report.md
